--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             <button type="button" class="operator" value="/">&divide;</button>
 
             <!-- Number Keys -->
-            <button type="button" class="number" value="7">7</button>
-            <button type="button" class="number" value="8">8</button>
-            <button type="button" class="number" value="9">9</button>
+            <button type="button" value="7">7</button>
+            <button type="button" value="8">8</button>
+            <button type="button" value="9">9</button>
 
-            <button type="button" class="number" value="4">4</button>
-            <button type="button" class="number" value="5">5</button>
-            <button type="button" class="number" value="6">5</button>
+            <button type="button" value="4">4</button>
+            <button type="button" value="5">5</button>
+            <button type="button" value="6">5</button>
 
-            <button type="button" class="number" value="1">1</button>
-            <button type="button" class="number" value="2">2</button>
-            <button type="button" class="number" value="3">3</button>
+            <button type="button" value="1">1</button>
+            <button type="button" value="2">2</button>
+            <button type="button" value="3">3</button>
 
-            <button type="button" class="number" value="0">0</button>
+            <button type="button" value="0">0</button>
             <button type="button" class="decimal" value=".">.</button>
             <button type="button" class="clear" value="clear">C</button>
 
