--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1> Calc-It</h1>
     <div class="calc">
         <!-- This is the display screen for the calculator -->
         <input type="text" class="screen" value="" disabled />
